--- a/html/detalle.html
+++ b/html/detalle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../CSS/styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,9 @@
             <nav class="navbar navbar-expand-md bru-navbar">
                 <div class="container-fluid">
 
-                    <img src="Logo.png" alt="Logo de amapola" class="navbar-brand">
+                    <img src="../Images/Logo.png" alt="Logo de amapola" class="navbar-brand">
                     <div class="navbar-nav ">
-                        <a class="nav-item nav-link btn btn-outline-dark" href="index.html">Home</a>
+                        <a class="nav-item nav-link btn btn-outline-dark" href="../index.html">Home</a>
                         <a class="nav-item nav-link btn btn-outline-dark" href="contactenos.html">Contacto</a>
                         <a class="nav-item nav-link btn btn-outline-dark" href="productos.html">Productos</a>
                         <a class="nav-item nav-link btn btn-outline-dark" href="sobre_nosotros.html">Sobre nosotros</a>
