--- a/html/sobre_nosotros.html
+++ b/html/sobre_nosotros.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../CSS/styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +11,9 @@
         <header>
             <nav class="navbar navbar-expand-md bru-navbar">
                 <div class="container-fluid">
-                    <img src="Logo.png" alt="Logo de amapola" class="navbar-brand">
+                    <img src="../Images/Logo.png" alt="Logo de amapola" class="navbar-brand">
                     <div class="navbar-nav ">
-                        <a class="nav-item nav-link btn btn-outline-dark" href="index.html">Home</a>
+                        <a class="nav-item nav-link btn btn-outline-dark" href="../index.html">Home</a>
                         <a class="nav-item nav-link btn btn-outline-dark" href="contactenos.html">Contacto</a>
                         <a class="nav-item nav-link btn btn-outline-dark" href="productos.html">Productos</a>
                         <a class="nav-item nav-link btn btn-outline-dark" href="sobre_nosotros.html">Sobre nosotros</a>
@@ -24,7 +24,6 @@
         <main>
             <h1 class="text-center p-5">Sobre nosotros</h1>
             <div class="about_us">
-
                 <img 
                 src="https://i.pinimg.com/originals/fb/ed/32/fbed3256e3a558bd17a0c7fd23e34ba5.jpg" 
                 alt="">
